# MaxCutDataReduction

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: mannino_k487c.wel  mo.wel  power-US-Grid.mc  power-US-Grid.wel
include/mcp/auxiliary/: active_elements.hpp  block_cut_tree.hpp  chrono_io.hpp  cl_parser.hpp  draw.hpp  graphs.hpp  io.hpp  node_separator.hpp  small_ccs.hpp  statistics.hpp
include/mcp/instance/: maxcut.hpp
include/mcp/prepro/: base.hpp  data_reduction.hpp  similar_subgraph_reduction.hpp  spqr.hpp  weight_stable_reducer.hpp  weighted_reducer.hpp
include/mcp/solver/: burer_solver.hpp  enumeration_solver.hpp  gurobi_quadratic_solver.hpp  unit_weight_solver.hpp
src/auxiliary/: cl_parser.cpp  graphs.cpp  small_ccs.cpp  statistics.cpp
src/auxiliary/test/: CMakeLists.txt  active_elements_gtest.cpp  block_cut_tree_gtest.cpp  graphs_gtest.cpp  io_gtest.cpp  statistics_gtest.cpp
src/instance/: maxcut.cpp
src/instance/test/: CMakeLists.txt  maxcut_gtest.cpp
src/mains/: gurobi_quadratic.cpp
src/prepro/: similar_subgraph_reduction.cpp  spqr.cpp  weight_stable_reducer.cpp  weighted_reducer.cpp
src/prepro/test/: CMakeLists.txt  data_reduction_gtest.cpp  similar_subgraph_reduction_gtest.cpp  spqr_gtest.cpp  weight_stable_reducer_gtest.cpp  weighted_reducer_gtest.cpp
src/solver/: burer_solver.cpp  enumeration_solver.cpp  gurobi_quadratic_solver.cpp  unit_weight_solver.cpp
src/solver/test/: CMakeLists.txt  burer_solver_gtest.cpp  enumeration_solver_gtest.cpp  unit_weight_solver_gtest.cpp
